# HEPilot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-embedding.txt  requirements.txt
adapters/: README.md  models.py
adapters/Twiki_adapter/: README.md  acquisition.py  adater_config.json  lhcb_table_0_20251029_124156.csv  lhcb_table_1_20251029_124156.csv  lhcb_table_4_20251029_124156.csv  lhcb_table_6_20251029_124156.csv  main.py  metadata.py  scrape_2.py  test_twiki_acquisition.py  test_twiki_chunker.py  test_twiki_discovery.py  test_twiki_processing.py  twiki_chunk_metadata.py  twiki_chunker.py  twiki_config.py  twiki_discovery.py  twiki_processing.py
adapters/Twiki_adapter/SCRAPING-1/: Scrape_1.py  lhcb_facts_20251029_124156.json  lhcb_facts_20251029_124156.txt  lhcb_raw_20251029_124156.txt  lhcb_table_2_20251029_124156.csv  lhcb_table_3_20251029_124156.csv  lhcb_table_5_20251029_124156.csv  (+1 more)
adapters/arxiv_adapter/: COMPLIANCE_REPORT.md  Makefile  README.md  acquisition.py  adapter_config.json  cache_manager.py  config.py  discovery.py  fast_html_processing.py  main.py  metadata.py  models.py  processing.py  requirements.txt  run.sh
adapters/arxiv_adapter_pdf_legacy/: adapter_config.json  cache_manager.py  discovery.py  models.py  utils.py
adapters/hep_adapter_arxiv_lhcb/: .gitignore  README.md  acquisition.py  adapter.py  adapter_config.json  cache_utils.py  chunking.py  config.yaml  discovery.py  hepilot_arxiv_adapter.py  models.py  processing.py  progress_tracker.py  requirements.txt  run.py  run_lhcb_processor.sh  state_manager.py  unified_cache.py
adapters/hep_adapter_arxiv_lhcbb/: .gitignore  hepilot_arxiv_adapter.py
compliance_tests/: arxiv_adapter_compliance_test.py
config/: embedding-local.toml  embedding.toml
data_twiki/: LHCbL0Trigger.md  LHCbL0Trigger.txt  LHCbOT.md  LHCbOT.txt  LHCbRICH.md  LHCbRICH.txt  LHCbST.md  LHCbST.txt  LHCb_Background.md  LHCb_Background.txt  LHCb_CALO.md  LHCb_CALO.txt  LHCb_Detector_Alignment.md  LHCb_Detector_Alignment.txt  LHCb_ECGD.md  LHCb_ECGD.txt  LHCb_FAQ.md  LHCb_FAQ.txt  LHCb_Herschel.md  LHCb_Herschel.txt  LHCb_Muon.md  LHCb_Muon.txt  LHCb_Operations.md  LHCb_Operations.txt  LHCb_PPTS.md  LHCb_PPTS.txt  LHCb_PerformancePaper.md  LHCb_PerformancePaper.txt  LHCb_Plume.md  LHCb_Plume.txt  LHCb_RealTimeAnalysis.md  LHCb_RealTimeAnalysis.txt  LHCb_Saftey.md  LHCb_Saftey.txt  LHCb_Stripping.md  LHCb_Stripping.txt  LHCb_TCK.md  LHCb_TCK.txt  LHCb_Technical_Coordination.md  LHCb_Technical_Coordination.txt  (+16 more)
docs/: DEVELOPMENT.md  embedding_quickstart.md  plan.md  reference.md
scripts/: ingest_embeddings.py  test_local_pipeline.py
src/collector/: __init__.py  config.py  pipeline.py  ports.py  registry.py  validation.py
src/embedding/: README.md  __init__.py  alembic.ini  config.py  exceptions.py  factory.py  pipeline.py  ports.py  registry.py
standards/: README.md  spec.json
standards/schemas/: acquisition_output.schema.json  adapter_config.schema.json  catalog.schema.json  chunk_metadata.schema.json  chunk_output.schema.json  credentials.schema.json  discovery_output.schema.json  document_metadata.schema.json  log_entry.schema.json  processing_metadata.schema.json  rate_limit_status.schema.json
(+38 files in other folders)
