[project]
name = "hepilot"
version = "0.1.0"
description = "Modular RAG framework for High-Energy Physics documentation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mohamed Elashri", email = "mohamed.elashri@cern.ch"}
]
keywords = ["rag", "hep", "physics", "llm", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.11",
]

# Core dependencies - will be added as components are developed
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "tqdm>=4.66.0",
    "jsonschema>=4.21.0",
    "requests>=2.31.0",
]

[project.urls]
Repository = "https://github.com/MohamedElashri/HEPilot"
Documentation = "https://github.com/MohamedElashri/HEPilot/tree/main/docs"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "contract: Contract tests",
]
